packages/optimizer/core/src/snapshots/qwik_core__test__snapshot_map_to_each_with_outer_capture.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const App = component$(() => {
  const items = [{ id: 'a', text: 'A' }];
  const extra = { suffix: '!' };
  return <div>{items.map((item) => <span key={item.id}>{item.text + extra.suffix}</span>)}</div>;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,oBAAM,0CAIhB\"}")
============================= test.tsx_App_component_div_Each_item_f829DjfZibU.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
//
const _hf0 = (p0, p1)=>p1.text + p0.suffix;
const _hf0_str = "p1.text+p0.suffix";
export const App_component_div_Each_item_f829DjfZibU = (item)=>{
    const extra = _captures[0];
    return /*#__PURE__*/ _jsxSorted("span", null, null, _fnSignal(_hf0, [
        extra,
        item
    ], _hf0_str), 1, null);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;uBAMwD,GAAK,IAAI,GAAG,GAAM,MAAM;;wDAAtD;;yBAAS,WAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_Each_item_f829DjfZibU",
  "entry": null,
  "displayName": "test.tsx_App_component_div_Each_item",
  "hash": "f829DjfZibU",
  "canonicalFilename": "test.tsx_App_component_div_Each_item_f829DjfZibU",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "jSXProp",
  "ctxName": "item$",
  "captures": true,
  "loc": [
    0,
    0
  ],
  "paramNames": [
    "item"
  ],
  "captureNames": [
    "extra"
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { Each } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_div_Each_item_f829DjfZibU = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_div_Each_item_f829DjfZibU"), "App_component_div_Each_item_f829DjfZibU");
const q_App_component_div_Each_key_07Oo5ReT59I = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_div_Each_key_07Oo5ReT59I"), "App_component_div_Each_key_07Oo5ReT59I");
//
export const App_component_ckEPmXZlub0 = ()=>{
    const items = [
        {
            id: 'a',
            text: 'A'
        }
    ];
    const extra = {
        suffix: '!'
    };
    return /*#__PURE__*/ _jsxSorted("div", null, null, _jsxSorted(Each, {
        item$: q_App_component_div_Each_item_f829DjfZibU.w([
            extra
        ]),
        items: items
    }, {
        key$: q_App_component_div_Each_key_07Oo5ReT59I
    }, null, 2, null), 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;yCAG8B;IAC5B,MAAM,QAAQ;QAAC;YAAE,IAAI;YAAK,MAAM;QAAI;KAAE;IACtC,MAAM,QAAQ;QAAE,QAAQ;IAAI;IAC5B,qBAAO,WAAC,mBAAyB;;;;eAApB;;;;AACf\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    78,
    260
  ]
}
*/
============================= test.tsx_App_component_div_Each_key_07Oo5ReT59I.js (ENTRY POINT)==

export const App_component_div_Each_key_07Oo5ReT59I = (item)=>item.id;


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"uDAM0B,OAAoB,KAAK,EAAE\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_Each_key_07Oo5ReT59I",
  "entry": null,
  "displayName": "test.tsx_App_component_div_Each_key",
  "hash": "07Oo5ReT59I",
  "canonicalFilename": "test.tsx_App_component_div_Each_key_07Oo5ReT59I",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "jSXProp",
  "ctxName": "key$",
  "captures": false,
  "loc": [
    0,
    0
  ],
  "paramNames": [
    "item"
  ]
}
*/
== DIAGNOSTICS ==

[]
