packages/optimizer/core/src/snapshots/qwik_core__test__snapshot_warn_when_map_key_comes_from_call.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const App = component$(() => {
  const items = [{ id: 'a', text: 'A' }];
  return <div>{items.map((item) => <div key={getKey(item)}>{item.text}</div>)}</div>;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,oBAAM,0CAGhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
//
export const App_component_ckEPmXZlub0 = ()=>{
    const items = [
        {
            id: 'a',
            text: 'A'
        }
    ];
    return /*#__PURE__*/ _jsxSorted("div", null, null, items.map((item)=>/*#__PURE__*/ _jsxSorted("div", null, null, _wrapProp(item, "text"), 1, getKey(item))), 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;yCAG8B;IAC5B,MAAM,QAAQ;QAAC;YAAE,IAAI;YAAK,MAAM;QAAI;KAAE;IACtC,qBAAO,WAAC,mBAAK,MAAM,GAAG,CAAC,CAAC,qBAAS,WAAC,6BAAwB,kBAAf,OAAO;AACpD\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    78,
    215
  ]
}
*/
== DIAGNOSTICS ==

[
  {
    "category": "warning",
    "code": null,
    "file": "test.tsx",
    "message": "This .map() was not optimized to Each because the key is derived from a function call.",
    "highlights": [
      {
        "lo": 143,
        "hi": 205,
        "startLine": 6,
        "startCol": 16,
        "endLine": 6,
        "endCol": 77
      }
    ],
    "suggestions": [
      "Use a stable key expression without function calls."
    ],
    "scope": "optimizer"
  }
]
