packages/optimizer/core/src/snapshots/qwik_core__test__snapshot_warn_when_map_key_uses_second_param_alias.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const App = component$(() => {
  const items = ['a'];
  return <div>{items.map((item, position) => {
    const key = position;
    return <div key={key}>{item}</div>;
  })}</div>;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,oBAAM,0CAMhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
//
export const App_component_ckEPmXZlub0 = ()=>{
    const items = [
        'a'
    ];
    return /*#__PURE__*/ _jsxSorted("div", null, null, items.map((item, position)=>{
        const key = position;
        return /*#__PURE__*/ _jsxSorted("div", null, null, item, 1, key);
    }), 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAG8B;IAC5B,MAAM,QAAQ;QAAC;KAAI;IACnB,qBAAO,WAAC,mBAAK,MAAM,GAAG,CAAC,CAAC,MAAM;QAC5B,MAAM,MAAM;QACZ,qBAAO,WAAC,mBAAe,SAAN;IACnB;AACF\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    78,
    236
  ]
}
*/
== DIAGNOSTICS ==

[
  {
    "category": "warning",
    "code": null,
    "file": "test.tsx",
    "message": "This .map() was not optimized to Each because the key uses the callback's index parameter.",
    "highlights": [
      {
        "lo": 124,
        "hi": 226,
        "startLine": 6,
        "startCol": 16,
        "endLine": 9,
        "endCol": 4
      }
    ],
    "suggestions": [
      "Use a stable key derived from the item instead of the callback's index parameter."
    ],
    "scope": "optimizer"
  }
]
