packages/optimizer/core/src/snapshots/qwik_core__test__support_windows_paths.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 2062
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';
export const Greeter = component$(() => <div/>)

============================= components/apps/apps.tsx_Greeter_component_0jjOvx068y0.ts (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
//
export const Greeter_component_0jjOvx068y0 = ()=>/*#__PURE__*/ _jsxSorted("div", null, null, null, 3, "KD_0");


Some("{\"version\":3,\"sources\":[\"C:\\\\users\\\\apps/components/apps/apps.tsx\"],\"names\":[],\"mappings\":\";;6CAEkC,kBAAM,WAAC\"}")
/*
{
  "origin": "components/apps/apps.tsx",
  "name": "Greeter_component_0jjOvx068y0",
  "entry": null,
  "displayName": "apps.tsx_Greeter_component",
  "hash": "0jjOvx068y0",
  "canonicalFilename": "apps.tsx_Greeter_component_0jjOvx068y0",
  "path": "components/apps",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    81,
    93
  ]
}
*/
============================= components/apps/apps.ts ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Greeter_component_0jjOvx068y0 = /*#__PURE__*/ qrl(()=>import("./apps.tsx_Greeter_component_0jjOvx068y0"), "Greeter_component_0jjOvx068y0");
//
export const Greeter = /*#__PURE__*/ componentQrl(q_Greeter_component_0jjOvx068y0);


Some("{\"version\":3,\"sources\":[\"C:\\\\users\\\\apps/components/apps/apps.tsx\"],\"names\":[],\"mappings\":\";;;;;AAEA,OAAO,MAAM,wBAAU,8CAAwB\"}")
== DIAGNOSTICS ==

[]
